removed titanic analysis notebooks after splitting into separate smaller notebooks, will recombine into full report after

--- a/titanic_preprocess_v2.ipynb
+++ b/titanic_preprocess_v2.ipynb
@@ -4,6 +4,114 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_class_women, second_class_women, third_class_women, first_class_men, second_class_men, third_class_men = separate_passengers_by_gender_and_class(train, genders, pclasses)\n",
+    "frames_list = [first_class_men, second_class_men, third_class_men, first_class_women, second_class_women, third_class_women]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Replace impute missing ages with median ages for each sex and class pair\n",
+    "for i in range (0, len(frames_list)):\n",
+    "    frames_list[i]['Age'].fillna(median_ages[i], inplace=True)\n",
+    "\n",
+    "#Stitch together the dataframes\n",
+    "train_data = pd.concat(frames_list)\n",
+    "\n",
+    "#Sort the dataframe by PassengerId\n",
+    "train_data.sort_values(by='PassengerId', inplace=True)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 891 entries, 0 to 890\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  891 non-null    int64  \n",
+      " 1   Survived     891 non-null    int64  \n",
+      " 2   Pclass       891 non-null    int64  \n",
+      " 3   Name         891 non-null    object \n",
+      " 4   Sex          891 non-null    object \n",
+      " 5   Age          891 non-null    float64\n",
+      " 6   SibSp        891 non-null    int64  \n",
+      " 7   Parch        891 non-null    int64  \n",
+      " 8   Ticket       891 non-null    object \n",
+      " 9   Fare         891 non-null    float64\n",
+      " 10  Cabin        204 non-null    object \n",
+      " 11  Embarked     889 non-null    object \n",
+      "dtypes: float64(2), int64(5), object(5)\n",
+      "memory usage: 90.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Reset index to PassengerId\n",
+    "train_data.set_index('PassengerId', inplace=True)\n",
+    "y_train = train_data['Survived']\n",
+    "train_data.drop('Survived', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create list of attributes for preprocessing pipeline\n",
+    "num_attribs = ['SibSp', 'Parch', 'Fare', 'Age']\n",
+    "cat_attribs = ['Pclass', 'Embarked', 'Sex']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create pipeline for preprocessing\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "num_pipeline = Pipeline([\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "    (\"std_scaler\", StandardScaler()),   \n",
+    "])\n",
+    "\n",
+    "cat_pipeline = Pipeline([\n",
+    "    (\"one_hot_encoder\", OneHotEncoder()),\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
