--- a/titanic_preprocess_v2.ipynb
+++ b/titanic_preprocess_v2.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'separate_passengers_by_gender_and_class' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m first_class_women, second_class_women, third_class_women, first_class_men, second_class_men, third_class_men \u001b[39m=\u001b[39m separate_passengers_by_gender_and_class(train, genders, pclasses)\n\u001b[1;32m      2\u001b[0m frames_list \u001b[39m=\u001b[39m [first_class_men, second_class_men, third_class_men, first_class_women, second_class_women, third_class_women]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'separate_passengers_by_gender_and_class' is not defined"
+     ]
+    }
+   ],
    "source": [
     "first_class_women, second_class_women, third_class_women, first_class_men, second_class_men, third_class_men = separate_passengers_by_gender_and_class(train, genders, pclasses)\n",
     "frames_list = [first_class_men, second_class_men, third_class_men, first_class_women, second_class_women, third_class_women]"
@@ -149,11 +161,37 @@
     "\n",
     "X_train"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "pd.to_pickle(X_train, 'data/X_train_v2.pkl')\n",
+    "pd.to_pickle(y_train, 'data/y_train_v2.pkl')"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "data_science",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
