--- a/titanic_preprocess_v3.ipynb
+++ b/titanic_preprocess_v3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,29 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023/07/04 16:04:52 WARNING mlflow.sklearn: Training metrics will not be recorded because training labels were not specified. To automatically record training metrics, provide training labels as inputs to the model training function.\n",
-      "2023/07/04 16:04:52 WARNING mlflow.sklearn: Failed to infer model signature: the trained model does not specify a `predict` function, which is required in order to infer the signature\n",
-      "2023/07/04 16:04:52 WARNING mlflow.sklearn: Model was missing function: predict. Not logging python_function flavor!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023/07/04 16:04:54 WARNING mlflow.data.pandas_dataset: Failed to infer schema for Pandas dataset. Exception: Unable to map 'object' type to MLflow DataType. object can be mapped iff all values have identical data type which is one of (string, (bytes or byterray),  int, float).\n",
-      "2023/07/04 16:04:54 WARNING mlflow.sklearn: Training metrics will not be recorded because training labels were not specified. To automatically record training metrics, provide training labels as inputs to the model training function.\n",
-      "2023/07/04 16:04:54 WARNING mlflow.sklearn: Failed to infer model signature: the trained model does not specify a `predict` function, which is required in order to infer the signature\n",
-      "2023/07/04 16:04:54 WARNING mlflow.sklearn: Model was missing function: predict. Not logging python_function flavor!\n",
-      "2023/07/04 16:04:56 WARNING mlflow.utils.autologging_utils: Encountered unexpected error during sklearn autologging: The following failures occurred while performing one or more logging operations: [MlflowException('Failed to perform one or more operations on the run with ID 4f62c32ba9ea415095a06b7723ae4f6a. Failed operations: [MlflowException(\"Changing param values is not allowed. Param with key=\\'steps\\' was already logged with value=\\'[(\\'imputer\\', SimpleImputer(strategy=\\'median\\')), (\\'std_scaler\\', StandardScaler())]\\' for run ID=\\'4f62c32ba9ea415095a06b7723ae4f6a\\'. Attempted logging new value \\'[(\\'one_hot_encoder\\', OneHotEncoder()), (\\'imputer\\', SimpleImputer(strategy=\\'median\\'))]\\'.\")]')]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -125,8 +105,9 @@
        "         0.        ,  1.        ]])"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -143,18 +124,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pd.to_pickle(X_train, 'data/X_train.pkl')\n",
-    "# pd.to_pickle(y_train, 'data/y_train.pkl')\n"
+    "pd.to_pickle(X_train, 'data/X_train_v3.pkl')\n",
+    "pd.to_pickle(y_train, 'data/y_train_v3.pkl')\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "data_science",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
