--- a/titanic_models_v3.ipynb
+++ b/titanic_models_v3.ipynb
@@ -1,11 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read in preprocessed data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "X_train = pd.read_pickle('data/X_train_v3.pkl')\n",
+    "y_train = pd.read_pickle('data/y_train_v3.pkl')"
+   ]
   },
   {
    "attachments": {},
