moved notebooks to folder, updated code that contains directory locations

--- a/notebooks/titanic_models_v3.ipynb
+++ b/notebooks/titanic_models_v3.ipynb
@@ -15,8 +15,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "X_train = pd.read_pickle('data/X_train_v3.pkl')\n",
-    "y_train = pd.read_pickle('data/y_train_v3.pkl')"
+    "X_train = pd.read_pickle('../data/X_train_v3.pkl')\n",
+    "y_train = pd.read_pickle('../data/y_train_v3.pkl')"
    ]
   },
   {
