--- a/notebooks/titanic_preprocess_v3.ipynb
+++ b/notebooks/titanic_preprocess_v3.ipynb
@@ -128,8 +128,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.to_pickle(X_train, 'data/X_train_v3.pkl')\n",
-    "pd.to_pickle(y_train, 'data/y_train_v3.pkl')\n"
+    "pd.to_pickle(X_train, '../data/X_train_v3.pkl')\n",
+    "pd.to_pickle(y_train, '../data/y_train_v3.pkl')\n"
    ]
   }
  ],
