--- a/notebooks/titanic_models_v3.ipynb
+++ b/notebooks/titanic_models_v3.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,39 +72,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import warnings\n",
-    "import warnings\n",
-    "\n",
-    "#Ignore warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "#Create a dictionary to hold models\n",
+    "models = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Experiment tracking\n",
-    "import mlflow\n",
-    "import mlflow.sklearn\n",
-    "import mlflow.xgboost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "#Begin logging\n",
-    "mlflow.sklearn.autolog()"
+    "#Create function to add model and metrics to dictionary\n",
+    "def model_eval(model, name, X_train, y_train, cv):\n",
+    "    #Fit model\n",
+    "    model.fit(X_train, y_train)\n",
+    "    \n",
+    "    #Create predictions\n",
+    "    y_pred = model.predict(X_train)\n",
+    "    \n",
+    "    #Create cross validation scores\n",
+    "    cv_scores = cross_val_score(model, X_train, y_train, cv=cv)\n",
+    "    \n",
+    "    #Create cross validation predictions\n",
+    "    cv_pred = cross_val_predict(model, X_train, y_train, cv=cv)\n",
+    "    \n",
+    "    #Create metrics\n",
+    "    accuracy = accuracy_score(y_train, y_pred)\n",
+    "    precision = precision_score(y_train, y_pred)\n",
+    "    recall = recall_score(y_train, y_pred)\n",
+    "    f1 = f1_score(y_train, y_pred)\n",
+    "    roc_auc = roc_auc_score(y_train, y_pred)\n",
+    "    \n",
+    "    #Add metrics to dictionary\n",
+    "    models[name] = {'model': model,\n",
+    "                    'accuracy': accuracy,\n",
+    "                    'precision': precision,\n",
+    "                    'recall': recall,\n",
+    "                    'f1': f1,\n",
+    "                    'roc_auc': roc_auc,\n",
+    "                    'cv_scores': cv_scores,\n",
+    "                    'cv_pred': cv_pred}\n",
+    "    \n",
+    "    #Print metrics\n",
+    "    print(name)\n",
+    "    print('Accuracy: ', accuracy)\n",
+    "    print('Precision: ', precision)\n",
+    "    print('Recall: ', recall)\n",
+    "    print"
    ]
   },
   {
@@ -117,97 +135,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style>#sk-container-id-2 {color: black;background-color: white;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier()</pre></div></div></div></div></div>"
+      ],
       "text/plain": [
-       "<Experiment: artifact_location='file:///home/ty/code/data_science/analysis/Titanic-Analysis/mlruns/431820994769440421', creation_time=1688500931603, experiment_id='431820994769440421', last_update_time=1688500931603, lifecycle_stage='active', name='Random Forest Classifier', tags={}>"
+       "RandomForestClassifier()"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Set Experiment name\n",
-    "mlflow.set_experiment('Random Forest Classifier')"
+    "#Create model\n",
+    "rf_clf = RandomForestClassifier()\n",
+    "\n",
+    "#Fit the model\n",
+    "rf_clf.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/07/04 16:07:31 WARNING mlflow.sklearn: Failed to log training dataset information to MLflow Tracking. Reason: 'Series' object has no attribute 'flatten'\n",
-      "2023/07/04 16:07:34 WARNING mlflow.utils.autologging_utils: Encountered unexpected error during sklearn autologging: The following failures occurred while performing one or more logging operations: [MlflowException('Failed to perform one or more operations on the run with ID 4f62c32ba9ea415095a06b7723ae4f6a. Failed operations: [MlflowException(\"Changing param values is not allowed. Param with key=\\'verbose\\' was already logged with value=\\'False\\' for run ID=\\'4f62c32ba9ea415095a06b7723ae4f6a\\'. Attempted logging new value \\'0\\'.\")]')]\n"
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      0.99      0.98       549\n",
+      "           1       0.99      0.96      0.97       342\n",
+      "\n",
+      "    accuracy                           0.98       891\n",
+      "   macro avg       0.98      0.98      0.98       891\n",
+      "weighted avg       0.98      0.98      0.98       891\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "mlflow.set_tag('Random Forest Classifier', 'Random Forest Classifier')\n",
-    "rf_clf = RandomForestClassifier()\n",
-    "rf_clf.fit(X_train, y_train)\n",
-    "\n",
-    "y_pred = rf_clf.predict(X_train)\n",
-    "\n",
-    "\n",
-    "#Set run name\n",
-    "mlflow.set_tag('run_1', 'RandomForestClassifier')"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Gradient Boosting Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Create Gradient Boosting Classifier\n",
-    "# gb_clf = GradientBoostingClassifier()\n",
-    "\n",
-    "# #Fit model\n",
-    "# gb_clf.fit(X_train, y_train)\n",
-    "\n",
-    "# #Predict on training set\n",
-    "# y_pred = gb_clf.predict(X_train)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### SGD Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #Make SGD Classifier\n",
-    "# sgd_clf = SGDClassifier()\n",
-    "\n",
-    "# #Fit model\n",
-    "# sgd_clf.fit(X_train, y_train)\n",
-    "\n",
-    "# #Predict on training set\n",
-    "# y_pred = sgd_clf.predict(X_train)\n"
+    "#Get classification report\n",
+    "rf_clf_report = classification_report(y_train, rf_clf.predict(X_train))\n",
+    "print(rf_clf_report)"
    ]
   },
   {
