--- a/notebooks/titanic_preprocess_v2.ipynb
+++ b/notebooks/titanic_preprocess_v2.ipynb
@@ -2,21 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "import multiprocessing\n",
+    "\n",
+    "np.random.seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv('../data/train.csv')\n",
+    "test = pd.read_csv('../data/test.csv')\n",
+    "y_train = train['Survived']\n",
+    "train.drop(['Survived', 'Cabin', 'Ticket', 'Name'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'separate_passengers_by_gender_and_class' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m first_class_women, second_class_women, third_class_women, first_class_men, second_class_men, third_class_men \u001b[39m=\u001b[39m separate_passengers_by_gender_and_class(train, genders, pclasses)\n\u001b[1;32m      2\u001b[0m frames_list \u001b[39m=\u001b[39m [first_class_men, second_class_men, third_class_men, first_class_women, second_class_women, third_class_women]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'separate_passengers_by_gender_and_class' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['female' 'male']\n",
+      "[1 2 3]\n"
      ]
     }
    ],
+   "source": [
+    "genders = train['Sex'].unique()\n",
+    "pclasses = train['Pclass'].unique()\n",
+    "\n",
+    "genders.sort()\n",
+    "pclasses.sort()\n",
+    "\n",
+    "print(genders)\n",
+    "print(pclasses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Function to separate passengers by 'Sex' and 'Pclass'\n",
+    "def separate_passengers_by_gender_and_class(df, genders, pclasses):\n",
+    "    frames = []\n",
+    "    for gender in genders:\n",
+    "        for pclass in pclasses:\n",
+    "            frame = df[(df['Sex'] == gender) & (df['Pclass'] == pclass)].copy()\n",
+    "            frames.append(frame)\n",
+    "    return frames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "first_class_women, second_class_women, third_class_women, first_class_men, second_class_men, third_class_men = separate_passengers_by_gender_and_class(train, genders, pclasses)\n",
     "frames_list = [first_class_men, second_class_men, third_class_men, first_class_women, second_class_women, third_class_women]"
@@ -24,7 +86,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[40.0, 30.0, 25.0, 35.0, 28.0, 21.5]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#List comprehension to calculate median age for each dataframe in list of dataframes\n",
+    "frames_list = [first_class_men, second_class_men, third_class_men, first_class_women, second_class_women, third_class_women]\n",
+    "median_ages = [df['Age'].median() for df in frames_list]\n",
+    "median_ages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -49,24 +134,20 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 891 entries, 0 to 890\n",
-      "Data columns (total 12 columns):\n",
+      "Index: 891 entries, 0 to 890\n",
+      "Data columns (total 8 columns):\n",
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
       " 0   PassengerId  891 non-null    int64  \n",
-      " 1   Survived     891 non-null    int64  \n",
-      " 2   Pclass       891 non-null    int64  \n",
-      " 3   Name         891 non-null    object \n",
-      " 4   Sex          891 non-null    object \n",
-      " 5   Age          891 non-null    float64\n",
-      " 6   SibSp        891 non-null    int64  \n",
-      " 7   Parch        891 non-null    int64  \n",
-      " 8   Ticket       891 non-null    object \n",
-      " 9   Fare         891 non-null    float64\n",
-      " 10  Cabin        204 non-null    object \n",
-      " 11  Embarked     889 non-null    object \n",
-      "dtypes: float64(2), int64(5), object(5)\n",
-      "memory usage: 90.5+ KB\n"
+      " 1   Pclass       891 non-null    int64  \n",
+      " 2   Sex          891 non-null    object \n",
+      " 3   Age          891 non-null    float64\n",
+      " 4   SibSp        891 non-null    int64  \n",
+      " 5   Parch        891 non-null    int64  \n",
+      " 6   Fare         891 non-null    float64\n",
+      " 7   Embarked     889 non-null    object \n",
+      "dtypes: float64(2), int64(4), object(2)\n",
+      "memory usage: 62.6+ KB\n"
      ]
     }
    ],
@@ -76,19 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Reset index to PassengerId\n",
-    "train_data.set_index('PassengerId', inplace=True)\n",
-    "y_train = train_data['Survived']\n",
-    "train_data.drop('Survived', axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -143,8 +212,9 @@
        "         0.        ,  1.        ]])"
       ]
      },
+     "execution_count": 53,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -164,14 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "pd.to_pickle(X_train, 'data/X_train_v2.pkl')\n",
-    "pd.to_pickle(y_train, 'data/y_train_v2.pkl')"
+    "pd.to_pickle(X_train, '../data/X_train_v2.pkl')\n",
+    "pd.to_pickle(y_train, '../data/y_train_v2.pkl')"
    ]
   }
  ],
