--- a/notebooks/titanic_models_v3.ipynb
+++ b/notebooks/titanic_models_v3.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import time\n",
     "\n",
     "np.random.seed(42)\n",
     "\n",
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +290,7 @@
        "       [ 15, 327]])"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +350,7 @@
      "output_type": "stream",
      "text": [
       "RandomForestClassifier\n",
-      "cv_score:  0.812621722846442\n",
+      "cv_score:  0.8058676654182273\n",
       "LogisticRegression\n",
       "cv_score:  0.8002372034956304\n",
       "GradientBoostingClassifier\n",
@@ -357,11 +358,11 @@
       "SVC\n",
       "cv_score:  0.8226966292134831\n",
       "SGDClassifier\n",
-      "cv_score:  0.7878651685393259\n",
+      "cv_score:  0.7790511860174781\n",
       "KNeighborsClassifier\n",
       "cv_score:  0.8069912609238452\n",
       "DecisionTreeClassifier\n",
-      "cv_score:  0.7901248439450688\n",
+      "cv_score:  0.7878776529338326\n",
       "XGBClassifier\n",
       "cv_score:  0.8125967540574284\n"
      ]
@@ -373,6 +374,174 @@
     "    print(model)\n",
     "    print('cv_score: ', models[model]['cv_score'])\n",
     "    print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max_depth': 8, 'max_features': 8, 'max_leaf_nodes': 20, 'n_estimators': 10, 'n_jobs': -1}\n",
+      "618.9058589935303\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Optimize RandomForestClassifier\n",
+    "start = time.time()\n",
+    "param_grid = [{'n_estimators': [3, 10, 30, 100, 300, 1000],\n",
+    "                'max_features': [2, 4, 6, 8, 10],\n",
+    "                'max_depth': [2, 4, 6, 8, 10],\n",
+    "                'max_leaf_nodes': [2, 4, 6, 8, 10, 20, 50],\n",
+    "                'n_jobs': [-1]}]\n",
+    "\n",
+    "rf_clf = RandomForestClassifier()\n",
+    "\n",
+    "grid_search = GridSearchCV(rf_clf, param_grid, cv=10, scoring='roc_auc', n_jobs=cpu_count())\n",
+    "\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "best_params = grid_search.best_params_\n",
+    "\n",
+    "stop = time.time()\n",
+    "total_time = stop - start\n",
+    "\n",
+    "print(best_params)\n",
+    "print(total_time)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.94      0.90       549\n",
+      "           1       0.88      0.75      0.81       342\n",
+      "\n",
+      "    accuracy                           0.87       891\n",
+      "   macro avg       0.87      0.84      0.85       891\n",
+      "weighted avg       0.87      0.87      0.86       891\n",
+      "\n",
+      "[[515  34]\n",
+      " [ 85 257]]\n",
+      "0.038655757904052734\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create a RandomForestClassifier with best params\n",
+    "start = time.time()\n",
+    "rf_clf = RandomForestClassifier(**best_params)\n",
+    "\n",
+    "#fit the model\n",
+    "rf_clf.fit(X_train, y_train)\n",
+    "\n",
+    "#evaluate the model\n",
+    "y_pred = rf_clf.predict(X_train)\n",
+    "\n",
+    "rf_clf_classification_report = classification_report(y_train, y_pred)\n",
+    "rf_clf_confusion_matrix = confusion_matrix(y_train, y_pred)\n",
+    "\n",
+    "stop = time.time()\n",
+    "total_time = stop - start\n",
+    "\n",
+    "print(rf_clf_classification_report)\n",
+    "print(rf_clf_confusion_matrix)\n",
+    "print(total_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[40], line 13\u001b[0m\n\u001b[1;32m      9\u001b[0m rf_clf \u001b[39m=\u001b[39m RandomForestClassifier()\n\u001b[1;32m     11\u001b[0m grid_search \u001b[39m=\u001b[39m GridSearchCV(rf_clf, param_grid, cv\u001b[39m=\u001b[39m\u001b[39m10\u001b[39m, scoring\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mroc_auc\u001b[39m\u001b[39m'\u001b[39m, n_jobs\u001b[39m=\u001b[39mcpu_count())\n\u001b[0;32m---> 13\u001b[0m grid_search\u001b[39m.\u001b[39;49mfit(X_train, y_train)\n\u001b[1;32m     15\u001b[0m best_params \u001b[39m=\u001b[39m grid_search\u001b[39m.\u001b[39mbest_params_\n\u001b[1;32m     16\u001b[0m \u001b[39mprint\u001b[39m(best_params)\n",
+      "File \u001b[0;32m~/.virtualenvs/data_science/lib/python3.10/site-packages/sklearn/model_selection/_search.py:874\u001b[0m, in \u001b[0;36mBaseSearchCV.fit\u001b[0;34m(self, X, y, groups, **fit_params)\u001b[0m\n\u001b[1;32m    868\u001b[0m     results \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_format_results(\n\u001b[1;32m    869\u001b[0m         all_candidate_params, n_splits, all_out, all_more_results\n\u001b[1;32m    870\u001b[0m     )\n\u001b[1;32m    872\u001b[0m     \u001b[39mreturn\u001b[39;00m results\n\u001b[0;32m--> 874\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_run_search(evaluate_candidates)\n\u001b[1;32m    876\u001b[0m \u001b[39m# multimetric is determined here because in the case of a callable\u001b[39;00m\n\u001b[1;32m    877\u001b[0m \u001b[39m# self.scoring the return type is only known after calling\u001b[39;00m\n\u001b[1;32m    878\u001b[0m first_test_score \u001b[39m=\u001b[39m all_out[\u001b[39m0\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mtest_scores\u001b[39m\u001b[39m\"\u001b[39m]\n",
+      "File \u001b[0;32m~/.virtualenvs/data_science/lib/python3.10/site-packages/sklearn/model_selection/_search.py:1388\u001b[0m, in \u001b[0;36mGridSearchCV._run_search\u001b[0;34m(self, evaluate_candidates)\u001b[0m\n\u001b[1;32m   1386\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_run_search\u001b[39m(\u001b[39mself\u001b[39m, evaluate_candidates):\n\u001b[1;32m   1387\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Search all candidates in param_grid\"\"\"\u001b[39;00m\n\u001b[0;32m-> 1388\u001b[0m     evaluate_candidates(ParameterGrid(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mparam_grid))\n",
+      "File \u001b[0;32m~/.virtualenvs/data_science/lib/python3.10/site-packages/sklearn/model_selection/_search.py:821\u001b[0m, in \u001b[0;36mBaseSearchCV.fit.<locals>.evaluate_candidates\u001b[0;34m(candidate_params, cv, more_results)\u001b[0m\n\u001b[1;32m    813\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mverbose \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m    814\u001b[0m     \u001b[39mprint\u001b[39m(\n\u001b[1;32m    815\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mFitting \u001b[39m\u001b[39m{0}\u001b[39;00m\u001b[39m folds for each of \u001b[39m\u001b[39m{1}\u001b[39;00m\u001b[39m candidates,\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    816\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m totalling \u001b[39m\u001b[39m{2}\u001b[39;00m\u001b[39m fits\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[1;32m    817\u001b[0m             n_splits, n_candidates, n_candidates \u001b[39m*\u001b[39m n_splits\n\u001b[1;32m    818\u001b[0m         )\n\u001b[1;32m    819\u001b[0m     )\n\u001b[0;32m--> 821\u001b[0m out \u001b[39m=\u001b[39m parallel(\n\u001b[1;32m    822\u001b[0m     delayed(_fit_and_score)(\n\u001b[1;32m    823\u001b[0m         clone(base_estimator),\n\u001b[1;32m    824\u001b[0m         X,\n\u001b[1;32m    825\u001b[0m         y,\n\u001b[1;32m    826\u001b[0m         train\u001b[39m=\u001b[39;49mtrain,\n\u001b[1;32m    827\u001b[0m         test\u001b[39m=\u001b[39;49mtest,\n\u001b[1;32m    828\u001b[0m         parameters\u001b[39m=\u001b[39;49mparameters,\n\u001b[1;32m    829\u001b[0m         split_progress\u001b[39m=\u001b[39;49m(split_idx, n_splits),\n\u001b[1;32m    830\u001b[0m         candidate_progress\u001b[39m=\u001b[39;49m(cand_idx, n_candidates),\n\u001b[1;32m    831\u001b[0m         \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mfit_and_score_kwargs,\n\u001b[1;32m    832\u001b[0m     )\n\u001b[1;32m    833\u001b[0m     \u001b[39mfor\u001b[39;49;00m (cand_idx, parameters), (split_idx, (train, test)) \u001b[39min\u001b[39;49;00m product(\n\u001b[1;32m    834\u001b[0m         \u001b[39menumerate\u001b[39;49m(candidate_params), \u001b[39menumerate\u001b[39;49m(cv\u001b[39m.\u001b[39;49msplit(X, y, groups))\n\u001b[1;32m    835\u001b[0m     )\n\u001b[1;32m    836\u001b[0m )\n\u001b[1;32m    838\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(out) \u001b[39m<\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m    839\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    840\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mNo fits were performed. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    841\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mWas the CV iterator empty? \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    842\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mWere there no candidates?\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    843\u001b[0m     )\n",
+      "File \u001b[0;32m~/.virtualenvs/data_science/lib/python3.10/site-packages/sklearn/utils/parallel.py:63\u001b[0m, in \u001b[0;36mParallel.__call__\u001b[0;34m(self, iterable)\u001b[0m\n\u001b[1;32m     58\u001b[0m config \u001b[39m=\u001b[39m get_config()\n\u001b[1;32m     59\u001b[0m iterable_with_config \u001b[39m=\u001b[39m (\n\u001b[1;32m     60\u001b[0m     (_with_config(delayed_func, config), args, kwargs)\n\u001b[1;32m     61\u001b[0m     \u001b[39mfor\u001b[39;00m delayed_func, args, kwargs \u001b[39min\u001b[39;00m iterable\n\u001b[1;32m     62\u001b[0m )\n\u001b[0;32m---> 63\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m\u001b[39m__call__\u001b[39;49m(iterable_with_config)\n",
+      "File \u001b[0;32m~/.virtualenvs/data_science/lib/python3.10/site-packages/joblib/parallel.py:1098\u001b[0m, in \u001b[0;36mParallel.__call__\u001b[0;34m(self, iterable)\u001b[0m\n\u001b[1;32m   1095\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_iterating \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m   1097\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backend\u001b[39m.\u001b[39mretrieval_context():\n\u001b[0;32m-> 1098\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mretrieve()\n\u001b[1;32m   1099\u001b[0m \u001b[39m# Make sure that we get a last message telling us we are done\u001b[39;00m\n\u001b[1;32m   1100\u001b[0m elapsed_time \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime() \u001b[39m-\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_start_time\n",
+      "File \u001b[0;32m~/.virtualenvs/data_science/lib/python3.10/site-packages/joblib/parallel.py:975\u001b[0m, in \u001b[0;36mParallel.retrieve\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    973\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    974\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backend, \u001b[39m'\u001b[39m\u001b[39msupports_timeout\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mFalse\u001b[39;00m):\n\u001b[0;32m--> 975\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_output\u001b[39m.\u001b[39mextend(job\u001b[39m.\u001b[39;49mget(timeout\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtimeout))\n\u001b[1;32m    976\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    977\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_output\u001b[39m.\u001b[39mextend(job\u001b[39m.\u001b[39mget())\n",
+      "File \u001b[0;32m~/.virtualenvs/data_science/lib/python3.10/site-packages/joblib/_parallel_backends.py:567\u001b[0m, in \u001b[0;36mLokyBackend.wrap_future_result\u001b[0;34m(future, timeout)\u001b[0m\n\u001b[1;32m    564\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Wrapper for Future.result to implement the same behaviour as\u001b[39;00m\n\u001b[1;32m    565\u001b[0m \u001b[39mAsyncResults.get from multiprocessing.\"\"\"\u001b[39;00m\n\u001b[1;32m    566\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 567\u001b[0m     \u001b[39mreturn\u001b[39;00m future\u001b[39m.\u001b[39;49mresult(timeout\u001b[39m=\u001b[39;49mtimeout)\n\u001b[1;32m    568\u001b[0m \u001b[39mexcept\u001b[39;00m CfTimeoutError \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    569\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTimeoutError\u001b[39;00m \u001b[39mfrom\u001b[39;00m \u001b[39me\u001b[39;00m\n",
+      "File \u001b[0;32m/usr/lib/python3.10/concurrent/futures/_base.py:453\u001b[0m, in \u001b[0;36mFuture.result\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    450\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_state \u001b[39m==\u001b[39m FINISHED:\n\u001b[1;32m    451\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__get_result()\n\u001b[0;32m--> 453\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_condition\u001b[39m.\u001b[39;49mwait(timeout)\n\u001b[1;32m    455\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_state \u001b[39min\u001b[39;00m [CANCELLED, CANCELLED_AND_NOTIFIED]:\n\u001b[1;32m    456\u001b[0m     \u001b[39mraise\u001b[39;00m CancelledError()\n",
+      "File \u001b[0;32m/usr/lib/python3.10/threading.py:320\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    318\u001b[0m \u001b[39mtry\u001b[39;00m:    \u001b[39m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[1;32m    319\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 320\u001b[0m         waiter\u001b[39m.\u001b[39;49macquire()\n\u001b[1;32m    321\u001b[0m         gotit \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    322\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "#Optimize RandomForestClassifier\n",
+    "start = time.time()\n",
+    "param_grid = [{'n_estimators': [5, 10, 20, 50, 100, 500, 1000, 5000],\n",
+    "                'max_features': [2, 4, 6, 8, 10],\n",
+    "                'max_depth': [2, 4, 6, 8, 10],\n",
+    "                'max_leaf_nodes': [2, 4, 6, 8, 10, 20, 50],\n",
+    "                'n_jobs': [-1]}]\n",
+    "\n",
+    "rf_clf = RandomForestClassifier()\n",
+    "\n",
+    "grid_search = GridSearchCV(rf_clf, param_grid, cv=10, scoring='roc_auc', n_jobs=cpu_count())\n",
+    "\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "best_params = grid_search.best_params_\n",
+    "print(best_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.96      0.90       549\n",
+      "           1       0.91      0.72      0.81       342\n",
+      "\n",
+      "    accuracy                           0.87       891\n",
+      "   macro avg       0.88      0.84      0.85       891\n",
+      "weighted avg       0.87      0.87      0.86       891\n",
+      "\n",
+      "[[525  24]\n",
+      " [ 95 247]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create a model with best params\n",
+    "rf_clf = RandomForestClassifier(**best_params)\n",
+    "\n",
+    "#fit the model\n",
+    "rf_clf.fit(X_train, y_train)\n",
+    "\n",
+    "#evaluate the model\n",
+    "y_pred = rf_clf.predict(X_train)\n",
+    "\n",
+    "rf_clf_classification_report = classification_report(y_train, y_pred)\n",
+    "rf_clf_confusion_matrix = confusion_matrix(y_train, y_pred)\n",
+    "print(rf_clf_classification_report)\n",
+    "print(rf_clf_confusion_matrix)"
    ]
   },
   {
