Commented out correlation matrix building code to troubleshoot later. Created a dict of value counts for Survived column in each of the frames separated by pclass/sex

--- a/notebooks/titanic_eda.ipynb
+++ b/notebooks/titanic_eda.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "<AxesSubplot: xlabel='Pclass', ylabel='Age'>"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -480,12 +480,12 @@
     "first_class_violin_plot = sns.violinplot(x='Sex', y='Age', data=first_class, hue='Survived', split=True)\n",
     "first_class_violin_plot.set_ylim(0, 100)\n",
     "plt.title('First Class')\n",
-    "plt.savefig('first_class_violin_plot.png', dpi=300)"
+    "plt.savefig('../charts/first_class_violin_plot.png', dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -503,12 +503,12 @@
     "second_class_violin_plot = sns.violinplot(x='Sex', y='Age', data=second_class, hue='Survived', split=True)\n",
     "plt.title('Second Class')\n",
     "second_class_violin_plot.set_ylim(0, 100)\n",
-    "plt.savefig('second_class_violin_plot.png', dpi=300)"
+    "plt.savefig('../charts/second_class_violin_plot.png', dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -526,12 +526,12 @@
     "third_class_violin_plot = sns.violinplot(x='Sex', y='Age', data=third_class, hue='Survived', split=True)\n",
     "plt.title('Third Class')\n",
     "third_class_violin_plot.set_ylim(0, 100)\n",
-    "plt.savefig('third_class_violin_plot.png', dpi=300)"
+    "plt.savefig('../charts/third_class_violin_plot.png', dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "Text(0.5, 1.0, 'Survived vs Not Survived')"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "Text(0.5, 1.0, 'Age Distribution')"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "Text(0.5, 1.0, 'Age Distribution of All Males')"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "Text(0.5, 1.0, 'Age Distribution of All Females')"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "Name: Age, Length: 714, dtype: float64"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
        "Text(0.5, 1.0, 'Age Distributions and Densities, Both Sexes')"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
     "corr_matrix.dropna(subset=['Age', 'Embarked', 'Fare'], inplace=True)\n",
     "\n",
     "#Drop the cabin column\n",
-    "corr_matrix.drop(['Cabin', 'Ticket', 'Name'], axis=1, inplace=True)\n",
+    "corr_matrix.drop(['Cabin', 'Ticket','Name'], axis=1, inplace=True)\n",
     "\n",
     "#Check missing values counts\n",
     "corr_matrix.isnull().sum()"
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +944,7 @@
        "4            5         0       3  0.0  35.0      0      0   8.0500       0.0"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,18 +969,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 173,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Correlation matrix of preprocessed data\n",
-    "# corr_matrix.corr()"
+    "___________________________________________________________________________________________________________________________________\n",
+    "### Issue building correlation matrices\n",
+    "\n",
+    "Needs troubleshooting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Correlation matrix of preprocessed data\n",
+    "# corr_matrix = corr_matrix.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1016,23 +1026,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Function unused for now\n",
     "#Function to separate passengers by 'Sex' and 'Pclass'\n",
-    "def separate_passengers_by_gender_and_class(df, genders, pclasses):\n",
-    "    frames = []\n",
-    "    for gender in genders:\n",
-    "        for pclass in pclasses:\n",
-    "            frame = df[(df['Sex'] == gender) & (df['Pclass'] == pclass)]\n",
-    "            frames.append(frame)\n",
-    "    return frames"
+    "# def separate_passengers_by_gender_and_class(df, genders, pclasses):\n",
+    "#     frames = []\n",
+    "#     for gender in genders:\n",
+    "#         for pclass in pclasses:\n",
+    "#             frame = df[(df['Sex'] == gender) & (df['Pclass'] == pclass)]\n",
+    "#             frames.append(frame)\n",
+    "#     return frames"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1086,7 @@
        "[40.0, 30.0, 25.0, 35.0, 28.0, 21.5]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1123,7 @@
        " '3rd Class Females': 21.5}"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,6 +1133,60 @@
     "median_ages_dict = dict(zip(classes, median_ages))\n",
     "median_ages_dict"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Get value counts of 'Survived' for each dataframe in frames_list\n",
+    "survived_counts = [df['Survived'].value_counts() for df in frames_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'1st Class Males': Survived\n",
+      "0    77\n",
+      "1    45\n",
+      "Name: count, dtype: int64, '2nd Class Males': Survived\n",
+      "0    91\n",
+      "1    17\n",
+      "Name: count, dtype: int64, '3rd Class Males': Survived\n",
+      "0    300\n",
+      "1     47\n",
+      "Name: count, dtype: int64, '1st Class Females': Survived\n",
+      "1    91\n",
+      "0     3\n",
+      "Name: count, dtype: int64, '2nd Class Females': Survived\n",
+      "1    70\n",
+      "0     6\n",
+      "Name: count, dtype: int64, '3rd Class Females': Survived\n",
+      "1    72\n",
+      "0    72\n",
+      "Name: count, dtype: int64}\n"
+     ]
+    }
+   ],
+   "source": [
+    "survived_counts_dict = dict(zip(classes, survived_counts))\n",
+    "\n",
+    "print(survived_counts_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
