commented out correct code for previous commit

--- a/notebooks/titanic_eda.ipynb
+++ b/notebooks/titanic_eda.ipynb
@@ -1020,8 +1020,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats_frame = train.copy()\n",
-    "stats_frame.dropna(subset=['Age', 'Embarked', 'Fare'], inplace=True)"
+    "# stats_frame = train.copy()\n",
+    "# stats_frame.dropna(subset=['Age', 'Embarked', 'Fare'], inplace=True)"
    ]
   },
   {
@@ -1030,15 +1030,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Function unused for now\n",
     "#Function to separate passengers by 'Sex' and 'Pclass'\n",
-    "# def separate_passengers_by_gender_and_class(df, genders, pclasses):\n",
-    "#     frames = []\n",
-    "#     for gender in genders:\n",
-    "#         for pclass in pclasses:\n",
-    "#             frame = df[(df['Sex'] == gender) & (df['Pclass'] == pclass)]\n",
-    "#             frames.append(frame)\n",
-    "#     return frames"
+    "def separate_passengers_by_gender_and_class(df, genders, pclasses):\n",
+    "    frames = []\n",
+    "    for gender in genders:\n",
+    "        for pclass in pclasses:\n",
+    "            frame = df[(df['Sex'] == gender) & (df['Pclass'] == pclass)]\n",
+    "            frames.append(frame)\n",
+    "    return frames"
    ]
   },
   {
